--- a/index.html
+++ b/index.html
@@ -166,6 +166,6 @@
                 <br>
             </p>
         </footer>
-        <script src="JS/portfolio.js"></script>
+        <script src="js/portfolio.js"></script> <!----Javascript end or Javascript defer in head-->
     </body>
 </html>
